--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# ── Runtime ───────────────────────────────────────────────────────────────────
+.model_designer.pid
+
 # ── Python ────────────────────────────────────────────────────────────────────
 __pycache__/
 *.py[cod]
