--- a/backend/hsg_det/configs/hsg_det_m.yaml
+++ b/backend/hsg_det/configs/hsg_det_m.yaml
@@ -21,16 +21,13 @@
 # ─── Global ──────────────────────────────────────────────────────────────────
 nc: 80 # default num classes — overridden by dataset plugin at runtime
 
-depth_multiple: 1.0    # ← เพิ่มใหม่
-width_multiple: 1.0    # ← เพิ่มใหม่
-
 scales:
   # [depth, width, max_channels]  — 'm' scale matches YOLOv8-m
-  n: [0.33, 0.25, 768]
-  s: [0.33, 0.50, 768]
+  n: [0.33, 0.25, 1024]
+  s: [0.33, 0.50, 1024]
   m: [0.67, 0.75, 768]
   l: [1.00, 1.00, 768]
-  x: [1.00, 1.25, 768]
+  x: [1.00, 1.25, 1024]
 
 # ─── Backbone ────────────────────────────────────────────────────────────────
 # Standard YOLOv8-m backbone (C2f-based CSP) — unchanged from YOLO design.
@@ -61,7 +58,7 @@ head:
   # Upsample P5' and fuse with P4
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] # 11
   - [[-1, 6], 1, Concat, [1]] # 12 — cat P4 backbone
-  - [-1, 3, C2f, [512, False]] # 13 — P4 fused
+  - [-1, 3, C2f, [512, True]] # 13 — P4 fused
 
   # P4' — Sparse global at P4 (68×120 ≈ 8160 tokens, k=512 → 6% coverage)
   - [-1, 1, SparseGlobalBlockGated, [512, 512]] # 14 — HSG-DET: sparse global on P4
@@ -69,17 +66,17 @@ head:
   # Upsample P4' and fuse with P3
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] # 15
   - [[-1, 4], 1, Concat, [1]] # 16 — cat P3 backbone
-  - [-1, 3, C2f, [256, False]] # 17 — P3 fused (output for small objs)
+  - [-1, 3, C2f, [256, True]] # 17 — P3 fused (output for small objs)
 
   # ── PAN Bottom-up ─────────────────────────────────────────────────────────
 
   - [-1, 1, Conv, [256, 3, 2]] # 18 — downsample P3 fused
   - [[-1, 14], 1, Concat, [1]] # 19 — cat P4' (after sparse global)
-  - [-1, 3, C2f, [512, False]] # 20 — P4 output (medium objs)
+  - [-1, 3, C2f, [512, True]] # 20 — P4 output (medium objs)
 
   - [-1, 1, Conv, [512, 3, 2]] # 21 — downsample P4 output
   - [[-1, 10], 1, Concat, [1]] # 22 — cat P5' (after sparse global)
-  - [-1, 3, C2f, [512, False]] # 23 — P5 output (large objs)
+  - [-1, 3, C2f, [512, True]] # 23 — P5 output (large objs)
 
   # ── Decoupled Detection Head ──────────────────────────────────────────────
   # Sources: [P3 fused (s8), P4 output (s16), P5 output (s32)]
