--- a/backend/hsg_det/configs/hsg_det_m.yaml
+++ b/backend/hsg_det/configs/hsg_det_m.yaml
@@ -52,32 +52,31 @@ backbone:
 head:
   # ── FPN Top-down ──────────────────────────────────────────────────────────
 
-  # P5' — Sparse global at P5 (34×60 ≈ 2040 tokens, k=512 → 25% coverage)
-  - [-1, 1, SparseGlobalBlockGated, [1024, 512]] # 10 — HSG-DET: sparse global on P5
+  # P5' — Sparse global at P5 
+  - [-1, 1, SparseGlobalBlockGated, [1024, 512]] # 10 
 
   # Upsample P5' and fuse with P4
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] # 11
-  - [[-1, 6], 1, Concat, [1]] # 12 — cat P4 backbone
-  - [-1, 3, C2f, [512, True]] # 13 — P4 fused
+  - [[-1, 6], 1, Concat, [1]] # 12 
+  - [-1, 3, C2f, [512]] # 13 — เอา True ออกเพื่อให้ตรงกับ YOLOv8
 
-  # P4' — Sparse global at P4 (68×120 ≈ 8160 tokens, k=512 → 6% coverage)
-  - [-1, 1, SparseGlobalBlockGated, [512, 512]] # 14 — HSG-DET: sparse global on P4
+  # P4' — Sparse global at P4 
+  - [-1, 1, SparseGlobalBlockGated, [512, 512]] # 14 
 
   # Upsample P4' and fuse with P3
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] # 15
-  - [[-1, 4], 1, Concat, [1]] # 16 — cat P3 backbone
-  - [-1, 3, C2f, [256, True]] # 17 — P3 fused (output for small objs)
+  - [[-1, 4], 1, Concat, [1]] # 16 
+  - [-1, 3, C2f, [256]] # 17 — เอา True ออก
 
   # ── PAN Bottom-up ─────────────────────────────────────────────────────────
 
-  - [-1, 1, Conv, [256, 3, 2]] # 18 — downsample P3 fused
-  - [[-1, 14], 1, Concat, [1]] # 19 — cat P4' (after sparse global)
-  - [-1, 3, C2f, [512, True]] # 20 — P4 output (medium objs)
+  - [-1, 1, Conv, [256, 3, 2]] # 18 
+  - [[-1, 14], 1, Concat, [1]] # 19 
+  - [-1, 3, C2f, [512]] # 20 — เอา True ออก
 
-  - [-1, 1, Conv, [512, 3, 2]] # 21 — downsample P4 output
-  - [[-1, 10], 1, Concat, [1]] # 22 — cat P5' (after sparse global)
-  - [-1, 3, C2f, [512, True]] # 23 — P5 output (large objs)
+  - [-1, 1, Conv, [512, 3, 2]] # 21 
+  - [[-1, 10], 1, Concat, [1]] # 22 
+  - [-1, 3, C2f, [1024]] # 23 — *** แก้เป็น 1024 และเอา True ออก ***
 
   # ── Decoupled Detection Head ──────────────────────────────────────────────
-  # Sources: [P3 fused (s8), P4 output (s16), P5 output (s32)]
-  - [[17, 20, 23], 1, Detect, [nc]] # 24 — HSG-DET output
+  - [[17, 20, 23], 1, Detect, [nc]] # 24
